--- a/src/components/core/Header.module.css
+++ b/src/components/core/Header.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  margin-bottom: 1rem;
 }
 
 .siteLinks {
