--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,4 @@
 :root {
-  --sm-breakpoint: 600px;
-  --md-breakpoint: 960px;
-  --lg-breakpoint: 1280px;
-  --xl-breakpoint: 1920px;
-
   --spacing-01: 4px;
   --spacing-02: 8px;
   --spacing-03: 16px;
